--- a/iocs/gtestIOC/gtestApp/src/Makefile
+++ b/iocs/gtestIOC/gtestApp/src/Makefile
@@ -16,6 +16,7 @@ DBD += gtest.dbd
 gtest_DBD += base.dbd
 
 # Include dbd files from all support applications:
+gtest_DBD += gtestreg.dbd
 gtest_DBD += luaiocsup.dbd
 
 # Add all the support libraries needed by this IOC
@@ -23,6 +24,8 @@ gtest_LIBS += luaiocsup
 
 # gtest_registerRecordDeviceDriver.cpp derives from gtest.dbd
 gtest_SRCS += gtest_registerRecordDeviceDriver.cpp
+
+gtest_SRCS += gtestRegistrar.cpp
 
 # Build the main IOC entry point on workstation OSs.
 gtest_SRCS_DEFAULT += gtestMain.cpp
@@ -36,6 +39,7 @@ gtest_LIBS += $(EPICS_BASE_IOC_LIBS)
 
 # Note: googletest was compiled by passing -DCMAKE_POSITION_INDEPENDENT_CODE=ON to cmake
 #       to prevent 'recompile with -fPIC' error when creating libluaiocsup.so
+#       and installed to /usr/local
 USR_SYS_LIBS += gtest pthread
 USR_INCLUDES += -I../../../../../luaiocsupApp/src/
 
